	* Change some MSG_WriteChar calls to MSG_WriteByte
* Added the ability for UI controls to be made invisible using the invisible field of ui_control_t and the UI_SetInvisible function.
* More improvements to cl_showinfo:
	* Entities split into Server and Client Entities
	* Maximum number of entities, particles and dynamic lights now shown

REMOVALS:
* Removed ValidateSelectedItem function (doesn't do anything???)
* Removed the BFG
	* It's an iconic quake weapon and can't really be used in Zombono
	* It was broken anyway due to using SP2s (the only thing that used them at all!)

Version 0.0.7.299 (Build 299)
April 20, 2024

NEW FEATURES:
* The game now updates automatically! When you start the game, if an update is available, a message box will appear and you will be able to update the game.
	* The 7zip window while updating is temporary and will be removed in the next release when an actual update utility is written.
* Renamed cl_showpos to cl_showinfo:
	* Viewangles (both refdef and client) 
	* Number of entities being rendered
	* Number of dynamic lights being rendered
	* Number of particles being rendered
* Added option to switch between borderless and dedicated fullscreen to settings
* Added lighting to z_tdm_warehouse 
* Added a 50-health medpack (item_health_super) - complements the 2-health (item_health_small), 10-health/stimpack (item_health), 25-health (item_health_large) and 100-health (item_health_mega) entities.
	* Still uses Q2 assets...
* Texture fixes in z_tdm_subway and z_tdm_warehouse
* Added new details to Player spawn room in z_tdm_subway
* Renderer API version 8:
	* Added SetMouseScrollProc and SetWindowPos
* Game API version 7:
	* Renamed WriteLong to WriteInt
* UI: Allowed Image controls to optionally display a different image when the mouse is clicking on them (ui_control_t->image_path_on_click), set with the UI_SetImageOnClick function